# vscode-clang-workspace

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  test.cpp
clang-workspace/: a.out  main.cpp
cmake-workspace/: CMakeLists.txt
cmake-workspace-outdated/: CMakeCache.txt  CMakeLists.txt  myProject  run.sh
cmake-workspace/src/: main.cpp
